...
    ProfileListCard(Modifier.fillMaxWidth()) {
        Text(
            "You've created ${quizzes.size} quizzes.",
            style = MaterialTheme.typography.h6
        )
        // TODO: Most recent quiz
        ProfileNavigationButton(text = "Create quiz", onClick = navigateToQuizCreator)
    }
}

@Composable
private fun QuizResultsCard(results: List<ObjectId>, navigateToQuizResults: () -> Unit) {
    ProfileListCard(Modifier.fillMaxWidth()) {
...
            onDismissRequest = { dialogOpen = false },
            confirmButton = {
                TextButton(onClick = {
                    dialogOpen = false
                    onLogOut()
                }) {
                    Text("Confirm")
                }
            },
            dismissButton = {
                TextButton(onClick = { dialogOpen = false }) {
                    Text("Cancel")
                }
...
        contentColor = MaterialTheme.colors.onTopAppBar,
        elevation = 0.dp,
        actions = {
            IconButton(onClick = openSettings) {
                Icon(
                    imageVector = Icons.Filled.Settings,
                    contentDescription = "Settings",
                )
            }
            IconButton(onClick = { dialogOpen = true }) {
                Icon(
                    painter = painterResource(R.drawable.ic_logout_24),
                    contentDescription = "Log out",
                )
            }
        }
    )
}

...
            },
            text = { Text("Do you really want to sign out?") },
        )
    }

    TopAppBar(
        title = { Text("Profile Settings") },
        navigationIcon = {
            IconButton(onClick = onClose) {
                Icon(Icons.Default.Close, contentDescription = "Close profile settings")
            }
        },
        backgroundColor = MaterialTheme.colors.topAppBar,
...
